--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GA-LDN React Template</title>
+    <title>Director Dictator App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
